Se edita el formato de los emails de invitacion

--- a/app/views/user_invitations_mailer/send_invitation.html.erb
+++ b/app/views/user_invitations_mailer/send_invitation.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h3>Hi,</h3>
     <p>
-      <%=@sender.name%> <%=@sender.surname%> invited you to join <%=@organization_name%> at Coupons! <br>
+      <%=@sender_name%> <%=@sender_surname%> invited you to join <%=@organization_name%> at Coupons! <br>
     </p>
     <p>
       To sign up to the site, just follow this link: <a><%= link_to "Sign up", @registration_url %></a>
