--- a/app/views/user_invitations_mailer/send_invitation.text.erb
+++ b/app/views/user_invitations_mailer/send_invitation.text.erb
@@ -1,6 +1,6 @@
 Hi,
 
-<%=@sender.name%> <%=@sender.surname%> invited you to join <%=@organization_name%> at Coupons! 
+<%=@sender_name%> <%=@sender_surname%> invited you to join <%=@organization_name%> at Coupons! 
 ===================================================================================================================
 
 To sign up to the site, just follow this link: <%= link_to "Sign up", @registration_url %>
